--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       <h1>Tic-Tac-Toe</h1>
     </header>
     <section>
-      <div id='board'>
-    
-      </div>
+      <div class='player'></div>
+      <div id='board'></div>
+      <div class='player'></div>
     </section>
   </div>
 
