--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
       <h1>Tic-Tac-Toe</h1>
     </header>
-    <section>
+    <section id='game-area'>
       <div class='player'></div>
       <div id='board'></div>
       <div class='player'></div>
