Completed playerDisplayInfo method

--- a/index.html
+++ b/index.html
@@ -14,9 +14,15 @@
       <h1>Tic-Tac-Toe</h1>
     </header>
     <section id='game-area'>
-      <div class='player'></div>
+      <div class='player'>
+        <h3>Player 1</h3>
+        <p></p>
+      </div>
       <div id='board'></div>
-      <div class='player'></div>
+      <div class='player'>
+        <h3>Player 2</h3>
+        <p></p>
+      </div>
     </section>
   </div>
 
