Created modal for winning player
Created modal with HTML and styled CSS.

Updated checkWinner() method of GamePlay() to display the modal when the
correct player wins.

Added eventlistener to the 'Yes' button. 'No' button functionality has not
yet been added.

--- a/index.html
+++ b/index.html
@@ -16,15 +16,22 @@
     <section id='game-area'>
       <div class='player'>
         <h3>Player 1</h3>
-        <p></p>
+        <p>Wins: 0</p>
       </div>
       <div id='board'></div>
       <div class='player'>
         <h3>Player 2</h3>
-        <p></p>
+        <p>Wins: 0</p>
       </div>
     </section>
+    <div id='win-modal'>
+      <h3>Congrats, You Win!</h3>     
+      <p>Play again?</p>
+      <div class='buttons'>
+        <button id='yes'>Yes</button>
+        <button id='no'>No</button>
+      </div>
+    </div>
   </div>
-
 </body>
 </html>
