Created and added a reset button
Added reset button to index.html to reset the current game being played.

Rewrote the eventlistener code to listen to all buttons instead of bubbling.

Updated CSS to add styling for the buttons.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
         <h3>Player 1</h3>
         <p>Wins: 0</p>
       </div>
-      <div id='board'></div>
+      <div class='board-section'>
+        <div id='board'></div>
+        <button id='reset'>Reset</button>
+      </div>
       <div class='player'>
         <h3>Player 2</h3>
         <p>Wins: 0</p>
