--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@
         <p>Wins: 0</p>
       </div>
     </section>
+    <div id='start-modal'>
+        <div id='name-entry'>
+          <label for='player1'>Player 1:</label>
+          <input type='text' name='player1' id='player1' value='Player 1'>
+          <label for='player2'>Player 2:</label>
+          <input type='text' name='player2' id='player2' value='Player 2'>
+        </div>
+        <button id='start-game'>Start</button>
+    </div>
     <div id='win-modal'>
       <h3>Congrats, You Win!</h3>     
       <p>Play again?</p>
